--- a/SP2CJ/Shared/NavMenu.razor
+++ b/SP2CJ/Shared/NavMenu.razor
@@ -47,6 +47,16 @@
                 <span class="oi" aria-hidden="true"><i class="fa-solid fa-building"></i></span> Buat Jenis Pelayan
             </NavLink>
         </div>
+        <div class="nav-item  menu-label">
+            <NavLink class="nav-link px-3" href="BikinRenungan">
+                <span class="oi" aria-hidden="true"><i class="fa-brands fa-readme"></i></span> Baca Renungan
+            </NavLink>
+        </div>
+        <div class="nav-item  menu-label">
+            <NavLink class="nav-link px-3" href="BacaBoi">
+                <span class="oi" aria-hidden="true"><i class="fa-solid fa-pen-line"></i></span> Tulis Renungan
+            </NavLink>
+        </div>
     </nav>
 </div>
 
