--- a/SP2CJ/Pages/Index.razor
+++ b/SP2CJ/Pages/Index.razor
@@ -2,8 +2,6 @@
 
 <PageTitle>Index</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Masih dalam Pembuatan</h1>
 
-Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?" />
+<h4>Fitur yang bisa digunakan: Jadwal dan Renungan</h4>
