--- a/SP2CJ/Pages/Index.razor
+++ b/SP2CJ/Pages/Index.razor
@@ -5,3 +5,10 @@
 <h1>Masih dalam Pembuatan</h1>
 
 <h4>Fitur yang bisa digunakan: Jadwal dan Renungan</h4>
+<h4>Fitur yang sedang dalam pengerjaan</h4>
+<ul>
+    <li>Input ketidak tersediaan (untuk pelayan yang sudah tau tidak bisa melayani di hari tertentu)</li>
+    <li>Tolak pelayanan, sistem akan mencari pengganti yang tersedia</li>
+    <li>Login, Register, dan security lainnya</li>
+    <li>Sistem Notifikasi jika dapat jadwal</li>
+</ul>
