--- a/SP2CJ/App.razor
+++ b/SP2CJ/App.razor
@@ -6,7 +6,7 @@
     <NotFound>
         <PageTitle>Not found</PageTitle>
         <LayoutView Layout="@typeof(MainLayout)">
-            <p role="alert">Sorry, there's nothing at this address.</p>
+            <p role="alert">Kalo anda baca ini, artinya error. Lapor Jamiel anak om Dhani.</p>
         </LayoutView>
     </NotFound>
 </Router>
