--- a/SP2CJ/Pages/Index.razor
+++ b/SP2CJ/Pages/Index.razor
@@ -2,13 +2,36 @@
 
 <PageTitle>Index</PageTitle>
 
-<h1>Masih dalam Pembuatan</h1>
+<div class="container block" >
+    <h1>Masih dalam Pembuatan</h1>
 
-<h4>Fitur yang bisa digunakan: Jadwal dan Renungan</h4>
-<h4>Fitur yang sedang dalam pengerjaan</h4>
-<ul>
-    <li>Input ketidak tersediaan (untuk pelayan yang sudah tau tidak bisa melayani di hari tertentu)</li>
-    <li>Tolak pelayanan, sistem akan mencari pengganti yang tersedia</li>
-    <li>Login, Register, dan security lainnya</li>
-    <li>Sistem Notifikasi jika dapat jadwal</li>
-</ul>
+    <h4>Fitur yang bisa digunakan: Jadwal dan Renungan</h4>
+    <h4>Fitur yang sedang dalam pengerjaan</h4>
+    <ul>
+        <li>Input ketidak tersediaan (untuk pelayan yang sudah tau tidak bisa melayani di hari tertentu)</li>
+        <li>Tolak pelayanan, sistem akan mencari pengganti yang tersedia</li>
+        <li>Login, Register, dan security lainnya</li>
+        <li>Sistem Notifikasi jika dapat jadwal</li>
+    </ul>
+    <h5>Web ini dirancang dengan prinsip: Bisa digunakan oleh gereja lain.</h5>
+    <div class="card block">
+        <header class="card-header">
+            <p class="card-header-title">
+                Untuk Programmer
+            </p>
+            <a href="#collapsible-card" data-action="collapse" class="card-header-icon is-hidden-fullscreen" aria-label="more options">
+                <span class="icon">
+                    <i class="fas fa-angle-down" aria-hidden="true"></i>
+                </span>
+            </a>
+        </header>
+        <div id="collapsible-card" class="is-collapsible is-active">
+            <div class="card-content">
+                <p class="title is-4">
+                    Situs ini dibangun dengan Blazor Server (C#), Bulma CSS, dan MongoDB (saat ini di host di Atlas).
+                </p>
+            </div>
+        
+        </div>
+    </div>
+</div>
