--- a/SP2CJ/Pages/LihatJadwal.razor
+++ b/SP2CJ/Pages/LihatJadwal.razor
@@ -34,7 +34,8 @@
                         {
                             <p>@playan.Jemaat.FullName, @playan.Role.RoleName</p>
                         }
-                    }</div>
+                    }
+                    </div>
                     </div>
             }
         </div>
