--- a/SP2CJ/Pages/Index.razor
+++ b/SP2CJ/Pages/Index.razor
@@ -28,7 +28,7 @@
         </header>
         <div class="card-content" hidden="@hideCardProg">
             <div class="content" >
-                Situs ini dibangun dengan Blazor Server (C#), Bulma CSS, dan MongoDB (saat ini di host di Atlas). Server Backend yang bersifat API ditulis dengan .NET F#, namun saat di deploy ke Heroku kebakaran.
+                Situs ini dibangun dengan Blazor Server (C#), Bulma CSS, dan MongoDB (saat ini di host di Atlas). Server Backend yang bersifat API ditulis dengan .NET F#, namun saat di deploy ke Heroku kebakaran. Jadi, kalo ada yang ngerti tolong bantu awkwk.
             </div>
         </div>
         
