--- a/SP2CJ/Pages/BikinRenungan.razor
+++ b/SP2CJ/Pages/BikinRenungan.razor
@@ -1,4 +1,4 @@
-﻿@using SP2CJ.Services
+@using SP2CJ.Services
 @page "/BikinRenungan"
 <h3>BikinRenungan</h3>
 
@@ -21,7 +21,7 @@
                 <label class=" is-justify-content-space-between">
                     Isi:
                 </label>
-                <input  Class="textarea" @bind="newRenungan.Isi" />
+            <textarea  Class="textarea" @bind="newRenungan.Isi" ></textarea>
             </div>
             <div class="control block">
                 <label class=" is-justify-content-space-between">
